update example